--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    
     <div>
         <h3 id="texto1">
-            <p id="enfase"><b>< Olá/></Ol></b>,</p> meu nome é Cauã Nunes Gregos, sou Dev Junior cursando meu técnico
+            <p id="enfase"><b>< Olá/></Ol></b>,</p> Meu nome é Cauã Nunes Gregos, sou Dev Junior cursando meu técnico
             ainda espero um dia chegar a Faculdade e poder mudar esse site novamente
         </h3>
     </div>
