--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
             ainda espero um dia chegar a Faculdade e poder mudar esse site novamente
         </h3>
     </div>
-        <div id="textos"><h1>
+    
+     <div id="textos"><h1>
             < Meus projetos/>
-        </h1></div>
+        </h1>
+    </div>   
 
     <div id="java">
         <img src="https://img.icons8.com/ios-glyphs/50/000000/java-coffee-cup-logo.png" />
