--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <div id="foto">
         <img src="img/Perfil.jpg" alt="">
     </div>
+
+    <div></div>
    
     <div>
         <h3 id="texto1">
@@ -24,7 +26,7 @@
             ainda espero um dia chegar a Faculdade e poder mudar esse site novamente
         </h3>
     </div>
-    
+
      <div id="textos"><h1>
             < Meus projetos/>
         </h1>
